chore: added missing models
